--- a/EFGetStarted.AspNetCore.ExistingDb/Views/Shared/Components/MillDetail/Default.cshtml
+++ b/EFGetStarted.AspNetCore.ExistingDb/Views/Shared/Components/MillDetail/Default.cshtml
@@ -13,6 +13,8 @@
 
 </style>
 @{ 
+    //if no data available (no such mill)
+    //show error
     if (Model.Any())
     { <h3>Mill Detail</h3> }
     else
