--- a/EFGetStarted.AspNetCore.ExistingDb/Views/Shared/Components/ProdDetail/Default.cshtml
+++ b/EFGetStarted.AspNetCore.ExistingDb/Views/Shared/Components/ProdDetail/Default.cshtml
@@ -35,7 +35,11 @@
         border-bottom: thin solid;
     }
 </style>
-        
+@{
+    //if no data available, show error
+    if (Model.Any())
+    {
+
  <table>
     <thead>
         <tr>
@@ -96,3 +100,6 @@
             }
      </tbody>
 </table>
+
+                         }
+}
